[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/level_zombi/level2/assets/Z_adriel.png" type="Texture" id=1]
[ext_resource path="res://levels/level_zombi/level2/enemies/Z_adriel.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/disparo_1.mp3" type="AudioStream" id=3]
[ext_resource path="res://levels/level_zombi/level2/assets/Adriel_grito.mp3" type="AudioStream" id=4]

[node name="Z_adriel" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.327688, 0.322278 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 47.5, -49, 8.5, -48.5, -30, -43.5, -39.3456, -33.3354, -45.6953, -15.874, -42.1236, 3.96851, -32.5992, 2.3811, -29.4244, 17.4614, -24.2653, 23.0173, -26.6464, 34.9228, -36.9645, 24.6047, -39.3456, 13.0961, -48.0764, 3.57166, -77.8401, 11.1118, -76.6496, 20.6362, -70.3, 30.1606, -76.2527, 39.685, -60.3787, 42.0661, -42.1236, 43.6535, -37.7582, 40.0819, -34.9803, 45.6378, -29.4244, 51.9874, -56.4102, 57.1464, -60.3787, 79.37, 6.68898, 79.37, 3.91103, 66.6708, -15.9315, 63.0992, -16.3283, 52.3842, -10.3756, 37.3039, 3.91103, 41.6693, 5.89528, 51.9874, 9.07008, 53.1779, 18.1976, 32.9386, 18.5945, 48.4157, 42.4055, 55.9559, 53.1205, 48.8126, 44.7866, 38.0976, 44.7866, 13.8898, 75.3441, 3.57166, 76.1378, -11.5087, 67.4071, -24.2079, 56.6921, -19.4457, 56.2953, -32.5417, 48.3582, -41.2724 )

[node name="Timer_attack" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer_Zadriel" type="Timer" parent="."]
autostart = true

[node name="Timer_mad" type="Timer" parent="."]
wait_time = 0.6

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="adriel_grito" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0

[connection signal="area_entered" from="." to="." method="_on_Z_adriel_area_entered"]
[connection signal="timeout" from="Timer_attack" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_mad" to="." method="_on_Timer_mad_timeout"]
